# shinryohoshu-data

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REPRODUCE.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
data/archive/r6/: index.yaml
data/latest/: index.yaml
data/r6/: index.yaml
data/r6/items/: A000.yaml  A001.yaml  A002.yaml  A003.yaml  A100.yaml  A101.yaml  A103.yaml  A104.yaml  A105.yaml  A106.yaml  A107.yaml  A108.yaml  A200-2.yaml  A200.yaml  A201.yaml  A204-2.yaml  A204-3.yaml  A204.yaml  A205-2.yaml  A205-3.yaml  A205.yaml  A207-2.yaml  A207-3.yaml  A207.yaml  A208.yaml  A209.yaml  A210.yaml  A211.yaml  A212.yaml  A213.yaml  A214.yaml  A215.yaml  A218-2.yaml  A218.yaml  A219.yaml  A220-2.yaml  A220.yaml  A221-2.yaml  A222-2.yaml  A222.yaml  (+2169 more)
data/r8/: index.yaml
data/r8/items/: A000.yaml  A001.yaml  A002.yaml  A100.yaml  A101.yaml  A103.yaml  A104.yaml  A106.yaml  A107.yaml  A108.yaml  A200.yaml  A201.yaml  A202.yaml  A203.yaml  A204-2.yaml  A204-3.yaml  A204-4.yaml  A204.yaml  A205-2.yaml  A205-3.yaml  A205.yaml  A207-2.yaml  A207-3.yaml  A207-5.yaml  A207.yaml  A208.yaml  A209.yaml  A210.yaml  A211.yaml  A212.yaml  A213.yaml  (+2201 more)
docs/: .pages  explore.md  index.md
docs/assets/: explore.js
docs/diff/: .pages
docs/stylesheets/: extra.css
md/: demo-r6.md  demo-r8.md  demo.md  shinryou.md
schema/: index.schema.json  item.schema.json
scripts/: build_all.py  build_history.py  common.py  demo_extract.py  diff_revisions.py  extract_index.py  extract_items.py  extract_raw.py  markdownify.py  normalize.py  render_md.py  validate.py
(+7151 files in other folders)
